name:                ekg-riemann
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/edwardgeorge/ekg-riemann
license:             BSD3
license-file:        LICENSE
author:              Edward George
maintainer:          edwardgeorge@gmail.com
copyright:           2017 Edward George
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Riemann.Proto
                       System.Remote.Monitoring.Riemann
                       System.Remote.Monitoring.Riemann.Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , ekg-core
                     , network
                     , protobuf
                     , text
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable ekg-riemann-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ekg-riemann
  default-language:    Haskell2010

test-suite ekg-riemann-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ekg-riemann
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edwardgeorge/ekg-riemann
